--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "pt-utils",
-  "version": "1.0.92",
+  "name": "latabu",
+  "version": "1.0.0",
   "description": "util",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/koakumaping/pt-utils.git"
+    "url": "git+https://github.com/koakumaping/latabu.git"
   },
   "keywords": [
-    "ct"
+    "latabu",
+    "util"
   ],
   "author": "ping yifeng",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/koakumaping/pt-utils/issues"
+    "url": "https://github.com/koakumaping/latabu/issues"
   },
-  "homepage": "https://github.com/koakumaping/pt-utils#readme"
+  "homepage": "https://github.com/koakumaping/latabu#readme"
 }
